--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,6 @@
 {
-  "routes": [
-    {
-      "src": "/",
-      "dest": "/index.html"
-    },
-    {
-      "src": "/callback",
-      "dest": "/index.html"
-    }
+  "rewrites": [
+    { "source": "/", "destination": "/index.html" },
+    { "source": "/callback", "destination": "/index.html" }
   ]
 }
